Sun, 01 Jun 2008 10:17:32 +0200 <thp@perli.net>
Merge back changes from the 0.11.3 release branch into trunk

	* bin/gpodder: Updated for 0.11.3+svn
	* data/messages.pot: Merged from 0.11.3 release branch
	* data/po/*.po: Merged from 0.11.3 release branch
	* doc/man/gpodder.1: Merged from 0.11.3 release branch
	* README: Merged from 0.11.3 release branch

Sun, 25 May 2008 17:17:10 +0200 <thp@perli.net>
Fix problem with BitTorrent preferences

	* src/gpodder/gui.py: Merge bugfix patch by Nick (nikosapi) to make
	the BitTorrent preferences work correctly

Sun, 25 May 2008 17:10:36 +0200 <thp@perli.net>
Updated Spanish and Swedish translations

	* data/po/es.po: Updated Spanish translation by Marcos Hernández
	* data/po/sv.po: Updated Swedish translation by Anders Kvist
	* src/gpodder/gui.py: Add Marcos Hernández to list of contributors,
	because he did the updated Spanish translation

Fri, 23 May 2008 21:39:32 +0200 <thp@perli.net>
Updated French translation by Jérôme Chabod

	* data/po/fr.po: Updated French translation by Jérôme Chabod

Mon, 19 May 2008 15:12:41 +0200 <thp@perli.net>
Updated translations before the release stabilization phase

	* data/messages.pot: Updated from source
	* data/po/*.po: Updated from messages.pot

Fri, 16 May 2008 10:02:23 +0200 <thp@perli.net>
Add option to not hide channel cover and pill when the sidebar gets smaller

	* src/gpodder/config.py: Add "podcast_sidebar_save_space" option
	* src/gpodder/gui.py: Don't hide the channel cover and pill in the
	podcast list when the sidebar gets smaller; idea by Shane Donohoe

Wed, 14 May 2008 15:34:25 +0200 <thp@perli.net>
Download start performance improvements; fix podcast list handling

	* data/gpodder.glade: Convert the gPodderAddPodcastDialog from a
	GtkWindow to a real GtkDialog to make Escape key work and set the URL
	entry box to activate the "Add" button when Enter is pressed in it
	* src/gpodder/gui.py: Fix podcast selection in updateComboBox, so the