@@ -1,3 +1,11 @@
+Thu, 05 Jun 2008 18:10:11 +0200 <thp@perli.net>
+Merge Support for Rockbox Cover Art patch (by David Spreen and Nick)
+	* src/gpodder/config.py: Add configuration options for rockbox cover
+	art, thanks to Nick for providing the patch and integration
+	* src/gpodder/gui.py: Add David Spreen to the list of contributors
+	* src/gpodder/sync.py: Merge patch from David Spreen and Nick to
+	support Rockbox cover art synchronization
+
 Sun, 01 Jun 2008 10:17:32 +0200 <thp@perli.net>
 Merge back changes from the 0.11.3 release branch into trunk
 
